--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         
         <!-- 狗狗照片区域 -->
         <div class="puff-container">
-            <img src="puff.jpg" alt="泡芙" class="puff-photo" id="puffBtn">
+            <img src="puff.JPG" alt="泡芙" class="puff-photo" id="puffBtn">
             <div class="name-tag">泡芙 🐶</div>
         </div>
         
